Get Contact list API Completed

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "hclDB": "Data Source=LAPTOP-KQOHE738;Initial Catalog=HCL;Integrated Security=True"
+  }
 }
